moved assets to resources directory and added gulp build

--- a/resources/assets/css/landing-page.css
+++ b/resources/assets/css/landing-page.css
@@ -40,7 +40,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #fff;
-    background: url(../img/code.jpg) no-repeat center center;
+    background: url(images/code.jpg) no-repeat center center;
     background-size: cover;
 }
 
