--- a/dev-ldn/src/styles/_variables.scss
+++ b/dev-ldn/src/styles/_variables.scss
@@ -1,4 +1,7 @@
+/* stylelint-disable */
 $app-font: 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif;
+$code-font: 'Courier New', monospace;
 
 $black: #000;
 $white: #fff;
+/* stylelint-enable */
