reorganizes styles to prep for real work

--- a/dev-ldn/src/styles/index.scss
+++ b/dev-ldn/src/styles/index.scss
@@ -1,4 +1,6 @@
+/* stylelint-disable */
 @import '_variables.scss';
+@import '_app.scss';
 
 body {
     margin: 0;
@@ -11,3 +13,4 @@ body {
 code {
     font-family: $code-font;
 }
+/* stylelint-enable */
