--- a/dev-ldn/src/styles/_app.scss
+++ b/dev-ldn/src/styles/_app.scss
@@ -1,34 +1,11 @@
-.App {
-    text-align: center;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: $app-font;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 40vmin;
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc( 10px + 2vmin );
-    color: $white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-
-    from {
-        transform: rotate( 0deg );
-    }
-
-    to {
-        transform: rotate( 360deg );
-    }
+code {
+    font-family: $code-font;
 }
