--- a/dev-ldn/src/styles/_app.scss
+++ b/dev-ldn/src/styles/_app.scss
@@ -9,3 +9,78 @@ body {
 code {
     font-family: $code-font;
 }
+
+header {
+    display: flex;
+    min-height: 100%;
+    position: relative;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    height: 800px;
+    max-height: 800px;
+    flex-direction: column;
+
+    &::before {
+        background-image: url( '../assets/header.jpg' );
+        background-repeat: none;
+        background-position: center top;
+        background-size: cover;
+        content: '';
+        height: 800px;
+        left: 0;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        will-change: transform;
+        z-index: -2;
+    }
+
+    &::after {
+        background: rgba( $black, .7 );
+        height: 800px;
+        width: 100%;
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
+
+    h1 {
+        font-size: 4em;
+        color: $white;
+    }
+}
+
+.action-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.call-to-action {
+    color: $white;
+    font-weight: 500;
+    font-size: 1.5em;
+    padding: .5em 2em;
+    margin: 2em;
+    border: none;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1.25em;
+
+    &.primary {
+        background: $primary-color;
+    }
+
+    &.secondary {
+        background: $secondary-color;
+    }
+
+    &.tertiary {
+        background: $tertiary-color;
+    }
+}
