--- a/dev-ldn/src/styles/index.scss
+++ b/dev-ldn/src/styles/index.scss
@@ -1,4 +1,8 @@
 /* stylelint-disable */
 @import '_variables.scss';
 @import '_app.scss';
+@import '_utilities.scss';
+@import '_pop.scss';
+
+@import url('https://fonts.googleapis.com/css?family=Teko');
 /* stylelint-enable */
