adds info section

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 $app-font: 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif;
 $code-font: 'Courier New', monospace;
 $headline-font: 'Teko', sans-serif;
+$handwriting-font: 'Pacifico', cursive;
 
 $white: #fff;
 $off-white: #f9f9f9;
@@ -19,7 +20,7 @@ $tertiary-color: #f7b733;
 $slack: #72C5CD;
 $meetup: #ED1C40;
 
-$text-color: rgb(40, 38, 37);
+$text-color: #3e3e3e;
 $link-color: $primary-color;
 
 $max-width: 1180px;
