--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,5 +4,5 @@
 @import '_utilities.scss';
 @import '_pop.scss';
 
-@import url('https://fonts.googleapis.com/css?family=Teko');
+@import url('https://fonts.googleapis.com/css?family=Pacifico|Teko');
 /* stylelint-enable */
