--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -37,7 +37,7 @@ header {
     }
 
     &::after {
-        background: rgba( $primary-color, .3 );
+        background: rgba( $black, .3 );
         height: 800px;
         width: 100%;
         content: '';
@@ -57,6 +57,7 @@ header {
 
         .pop {
             color: $tertiary-color;
+            text-transform: default;
         }
     }
 }
@@ -77,13 +78,14 @@ header {
     font-weight: 700;
     font-size: 1.25em;
     padding: .5em 2em;
-    margin: 2em;
+    margin: 0 2em;
     border: none;
     border-radius: 4px;
     display: flex;
     align-items: center;
     justify-content: center;
-    line-height: 1.25em;
+    line-height: 2em;
+    width: 310px;
 }
 
 .slack {
@@ -105,14 +107,14 @@ header {
 .meetup {
     background: $meetup;
     position: relative;
-    padding-left: 4em;
+    padding-right: 4em;
 
     img {
         background: $white;
         border-radius: 60px;
         padding: .5em;
         position: absolute;
-        left: -1em;
+        right: -1em;
         height: 60px;
         width: 60px;
     }
@@ -122,12 +124,47 @@ header {
     display: flex;
     width: 100%;
     justify-content: space-around;
-    padding-top: 2em;
+    padding-top: 4em;
 
     .section {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
+        max-width: 400px;
+        white-space: pre-wrap;
+    }
+
+    h2 {
+        font-family: $handwriting-font;
+        font-size: 2em;
+        font-weight: 500;
+        letter-spacing: 2px;
+        color: $text-color;
+        margin: 0 0 .5em;
+    }
+
+    .caption {
+        margin-bottom: 2em;
+        text-align: center;
+        line-height: 1.5em;
+        font-size: 1.25em;
+        color: $text-color;
+    }
+}
+
+button {
+    background: $primary-color;
+    padding: .75em 2em;
+    display: flex;
+    align-items: center;
+    color: $white;
+    font-size: 1.25em;
+    font-weight: 500;
+    border-radius: 4px;
+    border: none;
+
+    svg {
+        margin-right: .5em;
     }
 }
