refinements to the message

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 /* stylelint-disable */
 $app-font: 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif;
 $code-font: 'Courier New', monospace;
-$headline-font: 'Teko', sans-serif;
+$headline-font: 'Raleway', sans-serif;
 $handwriting-font: 'Pacifico', cursive;
 
 $white: #fff;
