--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -29,7 +29,7 @@ header {
         content: '';
         height: 800px;
         left: 0;
-        position: fixed;
+        position: absolute;
         top: 0;
         width: 100%;
         will-change: transform;
@@ -41,7 +41,7 @@ header {
         height: 800px;
         width: 100%;
         content: '';
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         z-index: -1;
@@ -49,16 +49,24 @@ header {
 
     h1 {
         font-family: $headline-font;
-        font-size: 5em;
-        text-transform: uppercase;
+        font-size: 3em;
+        font-weight: 900;
         line-height: 1.25em;
-        letter-spacing: 5px;
         color: $white;
+        text-align: center;
 
         .pop {
-            color: $tertiary-color;
-            text-transform: default;
+            color: $primary-color;
         }
+    }
+
+    p {
+        color: $white;
+        font-size: 1.5em;
+        margin-bottom: 3em;
+        max-width: 800px;
+        text-align: center;
+        line-height: 1.5em;
     }
 }
 
@@ -75,48 +83,53 @@ header {
 
 .call-to-action {
     color: $white;
+    cursor: pointer;
     font-weight: 700;
     font-size: 1.25em;
-    padding: .5em 2em;
+    padding: .25em 2em;
     margin: 0 2em;
     border: none;
-    border-radius: 4px;
+    border-radius: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
     line-height: 2em;
     width: 310px;
-}
-
-.slack {
-    background: $slack;
     position: relative;
-    padding-left: 4em;
 
-    img {
-        background: $white;
-        padding: .5em;
-        border-radius: 60px;
-        height: 60px;
-        width: 60px;
-        position: absolute;
+    &.slack {
+        background: $slack;
+        padding-left: 4em;
+    }
+
+    &.meetup {
+        background: $meetup;
+        padding-right: 4em;
+    }
+
+    .left {
         left: -1em;
     }
-}
 
-.meetup {
-    background: $meetup;
-    position: relative;
-    padding-right: 4em;
+    .right {
+        right: -1em;
+    }
 
     img {
         background: $white;
         border-radius: 60px;
         padding: .5em;
         position: absolute;
-        right: -1em;
         height: 60px;
         width: 60px;
+    }
+
+    &.grow > img {
+        transition: all .2s ease-in-out;
+    }
+
+    &:hover > img {
+        transform: scale( 1.1 );
     }
 }
 
@@ -124,7 +137,7 @@ header {
     display: flex;
     width: 100%;
     justify-content: space-around;
-    padding-top: 4em;
+    padding: 4em 0;
 
     .section {
         display: flex;
@@ -155,13 +168,13 @@ header {
 
 button {
     background: $primary-color;
-    padding: .75em 2em;
+    padding: .5em 2em;
     display: flex;
     align-items: center;
     color: $white;
-    font-size: 1.25em;
-    font-weight: 500;
-    border-radius: 4px;
+    font-size: 1em;
+    font-weight: 700;
+    border-radius: 40px;
     border: none;
 
     svg {
