--- a/src/styles/_pop.scss
+++ b/src/styles/_pop.scss
@@ -1,5 +1,5 @@
 .shadow {
-    box-shadow: 0 3px 10px rgba( $black, .2 ), 0 3px 10px rgba( $black, .2 );
+    box-shadow: 0 3px 10px rgba( $black, .4 );
 }
 
 .pop-shadow {
