--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -84,6 +84,7 @@ header {
 .call-to-action {
     color: $white;
     cursor: pointer;
+    flex: 1;
     font-weight: 700;
     font-size: 1.25em;
     padding: .25em 2em;
@@ -94,6 +95,7 @@ header {
     align-items: center;
     justify-content: center;
     line-height: 2em;
+    text-decoration: none;
     width: 310px;
     position: relative;
 
