--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import '_app.scss';
 @import '_utilities.scss';
 @import '_pop.scss';
+@import '_slack.scss';
 
 @import url('https://fonts.googleapis.com/css?family=Pacifico|Raleway:700,900');
 /* stylelint-enable */
