updating community section and starting sponsors

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,9 @@ $black: #000;
 
 $primary-color: #bac54b;
 $dark-primary-color: darken($primary-color, 20%);
+$dark-green: #104539;
+$medium-green: #e2e5a3;
+$light-green: #efefca;
 $secondary-color: #639acf;
 $tertiary-color: #f7b733;
 
