--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -4,6 +4,7 @@ body {
     font-family: $app-font;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
 }
 
 code {
@@ -153,10 +154,12 @@ header {
 
 .info {
     display: flex;
-    width: 100%;
     justify-content: space-around;
-    padding: 4em 0;
+    padding: 6em 0 4em;
     position: relative;
+    width: 80vw;
+    max-width: 1400px;
+    margin: 0 auto;
 
     &::before {
         content: '';
@@ -173,7 +176,7 @@ header {
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        max-width: 400px;
+        max-width: 350px;
         white-space: pre-wrap;
         z-index: 2;
     }
@@ -214,5 +217,94 @@ button, .button {
 
     &:hover {
         box-shadow: 0 3px 5px rgba( $black, .2 );
+    }
+}
+
+.sponsor {
+    height: 300px;
+    background: $light-green;
+    color: $white;
+    position: relative;
+    margin-top: 10em;
+
+    &::before {
+        content: '';
+        display: block;
+        height: 100px;
+        position: absolute;
+        top: -6em;
+        background-image: url( '../assets/forest-light2.svg' );
+        width: 100vw;
+    }
+
+    .content {
+
+    }
+}
+
+.community {
+    color: $black;
+    background: $medium-green;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2em;
+    position: relative;
+
+    &::before {
+        content: '';
+        display: block;
+        height: 150px;
+        position: absolute;
+        top: -8em;
+        background-image: url( '../assets/forest-light.svg' );
+        width: 100vw;
+    }
+
+    h1 {
+        letter-spacing: 1px;
+    }
+
+    p {
+        font-size: 1.25em;
+    }
+
+    .group-listings {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        margin-top: 2em;
+        width: 80vw;
+        max-width: 1400px;
+    }
+
+    .group {
+        flex: 1;
+        margin: 0 2em;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+        .logo {
+            background: $white;
+            padding: 2em;
+            border-radius: 160px;
+            margin: 0 auto 1em;
+            height: 160px;
+            width: 160px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+                max-width: 80%;
+            }
+        }
+
+        h2, p {
+            text-align: center;
+            line-height: 1.75em;
+        }
     }
 }
