--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -6,4 +6,30 @@
 .txt-1 { color: $primary-color; }
 .txt-2 { color: $secondary-color; }
 .txt-3 { color: $tertiary-color; }
+
+// scss map for responsiveness
+$breakpoints: (
+    'small'  : 767px,
+    'medium' : 992px,
+    'large'  : 1200px
+);
+
+@mixin respond-to ($breakpoint) {
+    // Retrieves the value from the key
+    $value: map-get($breakpoints, $breakpoint);
+  
+    // If the key exists in the map
+    @if $value != null {
+      // Prints a media query based on the value
+      @media (min-width: $value) {
+        @content;
+      }
+    }
+  
+    // If the key doesn't exist in the map
+    @else {
+      @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+          + "Please make sure it is defined in `$breakpoints` map.";
+    }
+}
 /* stylelint-enable */
