--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -14,7 +14,7 @@ $breakpoints: (
     'large'  : 1200px
 );
 
-@mixin respond-to ($breakpoint) {
+@mixin respond-above ($breakpoint) {
     // Retrieves the value from the key
     $value: map-get($breakpoints, $breakpoint);
   
@@ -22,6 +22,25 @@ $breakpoints: (
     @if $value != null {
       // Prints a media query based on the value
       @media (min-width: $value) {
+        @content;
+      }
+    }
+  
+    // If the key doesn't exist in the map
+    @else {
+      @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+          + "Please make sure it is defined in `$breakpoints` map.";
+    }
+}
+
+@mixin respond-below ($breakpoint) {
+    // Retrieves the value from the key
+    $value: map-get($breakpoints, $breakpoint);
+  
+    // If the key exists in the map
+    @if $value != null {
+      // Prints a media query based on the value
+      @media (max-width: $value) {
         @content;
       }
     }
