--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -537,3 +537,31 @@ button, .button {
         }
     }
 }
+
+.footer {
+    background: $dark-grey;
+    padding: 3em;
+    color: $white;
+    text-align: center;
+
+    .contact {
+        color: $white;
+        text-align: center;
+        max-width: 800px;
+        margin: 2em auto 0;
+
+        .social {
+            cursor: pointer;
+            max-width: 50px;
+            margin: 0 1em;
+
+            &.padded {
+                background: $white;
+                padding: .5em;
+                height: 34px;
+                width: 34px;
+                border-radius: 50px;
+            }
+        }
+    }
+}
